--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "https": "^1.0.0",
     "mysql2": "^3.9.3"
   },
   "devDependencies": {
